# Day

./: README.md  electron-main.js  metadata.json  package-lock.json  package.json  preload.js  server.ts
src/: App.tsx  db.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
